refactor Dockerfile comments for clarity and accuracy

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,19 +1,20 @@
-# Use Node
+# Use Node 18, which is an excellent choice for a modern backend
 FROM node:18
 
 # Create app directory
 WORKDIR /app
 
-# Copy package.json files
-COPY ./package*.json ./
+# The critical fix: Copy the package.json files from the 'backend' folder
+# into the Docker container's current working directory ('/app').
+COPY backend/package*.json ./
 
-# Install dependencies
+# Install dependencies (This requires the package.json files to be present)
 RUN npm install
 
-# Copy everything else
-COPY . .
+# Copy everything else from the 'backend' folder to the current directory ('/app')
+COPY backend/. .
 
-# Expose port
+# Expose port (ensure this matches the port your server.js is listening on)
 EXPOSE 5000
 
 # Start server
